tests/ui/reachable/unreachable-loop-patterns.stderr
error: unreachable pattern
  --> $DIR/unreachable-loop-patterns.rs:16:9
   |
LL |     for _ in unimplemented!() as Void {}
   |         ^
   |
   = note: this pattern matches no values because `Void` is uninhabited
note: the lint level is defined here
  --> $DIR/unreachable-loop-patterns.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

